plugins{
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.8'
}
mainClassName = 'org.ros.RosRun'

java{
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

javafx {
  version = "12"
  modules = [ 'javafx.controls', 'javafx.fxml' ]
}

compileJava.options.encoding = 'UTF-8'

repositories {
  jcenter()
  maven {
    url 'https://esri.bintray.com/arcgis'
  }
  maven {
    url 'http://olympus.esri.com/artifactory/arcgisruntime-repo'
  }
}

ext {
  arcgisVersion = '100.8.0'
}

configurations {
  natives
}

dependencies {
  compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
  compile 'org.ros.rosjava_messages:geometry_msgs:1.12.7'
  compile 'org.ros.rosjava_messages:sensor_msgs:1.12.7'
  compile 'org.ros.rosjava_messages:mavros:0.8.5'
  compile 'org.ros.rosjava_messages:std_srvs:1.9.50'

  compile "com.esri.arcgisruntime:arcgis-java:$arcgisVersion"
  natives "com.esri.arcgisruntime:arcgis-java-jnilibs:$arcgisVersion"
  natives "com.esri.arcgisruntime:arcgis-java-resources:$arcgisVersion"

  compile 'com.google.inject:guice:4.0'

  implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
  implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'

  compile 'org.ros.rosjava_messages:dragonfly_messages:0.0.1'
}

task copyNatives(type: Copy) {
  description = "Copies the arcgis native libraries into the project build directory for development."
  group = "build"
  configurations.natives.asFileTree.each {
    from(zipTree(it))
  }
  // store native libraries in a common location shared with other samples
  into "${System.properties.getProperty("user.home")}/.arcgis/$arcgisVersion"
}

build {
  dependsOn copyNatives
}